--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -2,3 +2,7 @@
     padding: 0.1565rem 0.5rem;
     font-size: 0.8rem;
 }*/
+.number-right {
+	text-align: right; 
+    padding-right: 5px !important;
+}
