user list and others

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -6,3 +6,9 @@
 	text-align: right; 
     padding-right: 5px !important;
 }
+.box-background {
+	background: #3dcec0 !important;
+}
+.box-text {
+	color: #000000 !important;
+}
